codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__voice_live_transcript_and_stream.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                            "
"• Agent answer arriving                                     "
"                                                            "
"                                                            "
"› pick a number                                             "
"                                                            "
"                                                            "
"                                                            "
" voice ● listening                  f9 mute     /voice stop "
"                                                            "
"› Ask ASM to do anything                                    "
"                                                            "
"  sol56 def·/tmp/project                                    "
